feed.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-feed
  labels: 
    app: my-feed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-feed
  template:
    metadata:
      labels:
        app: my-feed
    spec: 
      containers:
      - name: my-feed
        image: researchportal/rp-cloud:v7
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /statusservice/status
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 1
