feed.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-feed
  labels:
    app: feed
    rel: stable
spec:
  containers:
  - name: my-feed
    image: researchportal/rp-cloud:v6
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /statusservice/status
        port: 80
      initialDelaySeconds: 15
      timeoutSeconds: 2
      periodSeconds: 5
      failureThreshold: 1
