feed.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-feed-deployment
  labels:
    app: my-feed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-feed
  template:
    metadata:
      labels:
        app: my-feed
    spec:
      containers:
        - name: my-feed
          image: researchportal/rp-cloud:v7
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
          livenessProbe:
            httpGet:
              path: /statusservice/status
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: my-feed-service
spec:
  type: LoadBalancer
  selector:
    app: my-feed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
