ingresscontrolstage.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myfeed-ingress-stage
  namespace: researchfeed
spec:
  rules:
    - host: myfeedstage.research.com
      http:
        paths:
          - path: /
            backend:
              serviceName: my-feed-service-stage
              servicePort: 80
